--- a/html5_intro_to_css/index.html
+++ b/html5_intro_to_css/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoe Store</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
@@ -23,22 +23,22 @@
             <h2>Shop Our Collection</h2>
             <div class="shoe-gallery">
                 <div class="shoe-item">
-                    <img src="https://images.pexels.com/photos/4175044/pexels-photo-4175044.jpeg" alt="Shoe 1">
+                    <img src="images/black_shoe_stripes.jpg" alt="Shoe 1">
                     <h3>Shoe Model 1</h3>
                     <p>$99.99</p>
                 </div>
                 <div class="shoe-item">
-                    <img src="https://images.pexels.com/photos/3069731/pexels-photo-3069731.jpeg" alt="Shoe 2">
+                    <img src="images/black_loafer.jpg" alt="Shoe 2">
                     <h3>Shoe Model 2</h3>
                     <p>$89.99</p>
                 </div>
                 <div class="shoe-item">
-                    <img src="https://images.pexels.com/photos/3666631/pexels-photo-3666631.jpeg" alt="Shoe 3">
+                    <img src="images/blue_shoe.jpg" alt="Shoe 3">
                     <h3>Shoe Model 3</h3>
                     <p>$79.99</p>
                 </div>
                 <div class="shoe-item">
-                    <img src="https://images.pexels.com/photos/1273215/pexels-photo-1273215.jpeg" alt="Shoe 4">
+                    <img src="images/nike_green.png" alt="Shoe 4">
                     <h3>Shoe Model 4</h3>
                     <p>$109.99</p>
                 </div>
@@ -51,5 +51,5 @@
         <p>Email: info@shoestore.com</p>
         <p>Phone: (123) 456-7890</p>
     </footer>
-</body>
+</body Shoes are not just a practical necessity; they are a reflection of personal style and cultural identity. From sleek sneakers designed for comfort and performance to elegant heels that elevate an outfit, the variety of footwear available caters to every occasion and preference. Beyond aesthetics, shoes serve crucial functions, providing support, protection, and stability. As fashion trends evolve, so too does the innovation in shoe design, incorporating sustainable materials and advanced technologies. Ultimately, the right pair of shoes can transform not only how we look but also how we feel, empowering us to walk confidently through life.>
 </html>
