--- a/html5_intro_to_css/index.html
+++ b/html5_intro_to_css/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shoe Store</title>
     <link rel="stylesheet" href="css/styles.css">
-</head>
+</head> 
 <body>
     <header>
         <h1>Welcome to Our Shoe Store</h1>
@@ -51,5 +51,144 @@
         <p>Email: info@shoestore.com</p>
         <p>Phone: (123) 456-7890</p>
     </footer>
-</body Shoes are not just a practical necessity; they are a reflection of personal style and cultural identity. From sleek sneakers designed for comfort and performance to elegant heels that elevate an outfit, the variety of footwear available caters to every occasion and preference. Beyond aesthetics, shoes serve crucial functions, providing support, protection, and stability. As fashion trends evolve, so too does the innovation in shoe design, incorporating sustainable materials and advanced technologies. Ultimately, the right pair of shoes can transform not only how we look but also how we feel, empowering us to walk confidently through life.>
+</body>
+</p>
 </html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shoe Store</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Optional: Link to your CSS file -->
+</head>
+<body>
+    <header>
+        <h1>Welcome to Our Shoe Store</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Discover the latest styles in shoes for every occasion.</p>
+        </section>
+
+        <section id="shop">
+            <h2>Shop</h2>
+            <p>Browse our collection of trendy and comfortable footwear.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Learn more about our commitment to quality and style.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact</h2>
+            <p>Get in touch with us for inquiries and support.</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Shoe Store. All rights reserved.</p>
+        <p>Follow us on social media!</p>
+    </footer>
+
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #e31010;
+        }
+        header {
+            background: #333;
+            color: #11e988;
+            padding: 10px 0;
+            text-align: center;
+        }
+        nav ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        nav ul li {
+            display: inline;
+            margin: 0 15px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+        }
+        main {
+            padding: 20px;
+        }
+        footer {
+            background: #333;
+            color: #16e8c9;
+            text-align: center;
+            padding: 10px 0;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</body>
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Shoe Store</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Welcome to The Shoe Store</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#products">Products</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Discover Our Collection</h2>
+            <p>At The Shoe Store, we offer a wide range of footwear that combines comfort, style, and durability. Whether you're looking for the perfect running shoes or stylish casuals, we have something for everyone.</p>
+        </section>
+        <img src="images/nike_green.png"
+
+        <section id="products">
+            <h2>Our Products</h2>
+            <p>Explore our diverse selection of shoes designed for various activities. From athletic footwear to elegant dress shoes, our collection caters to all your needs.</p>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>Founded with a passion for footwear, The Shoe Store is committed to providing high-quality products that fit perfectly into your lifestyle. Our team is dedicated to helping you find the right pair of shoes for every occasion.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Have questions? Feel free to reach out to us through our contact form or follow us on social media. We're here to assist you!</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 The Shoe Store. All rights reserved.</p>
+    </footer>
+</body>
+</html>
+
