--- a/html5_intro_to_css/index.html
+++ b/html5_intro_to_css/index.html
@@ -166,7 +166,7 @@
     <main>
         <section id="home">
             <h2>Discover Our Collection</h2>
-            <p>At The Shoe Store, we offer a wide range of footwear that combines comfort, style, and durability. Whether you're looking for the perfect running shoes or stylish casuals, we have something for everyone.</p>
+            <p>At The Shoe Store, we offer a wide range of footwear that combines comfort, style, and durability. Whether you're looking for the perfect running shoes or stylish casuals, we have something for everyone. We have the best top notch shoes. Specalized just for you.</p>
         </section>
         <img src="images/nike_green.png"
 
